# DoEngine

./: .clangd  .gitignore  CMakeLists.txt  README.md  build_errors.txt  build_errors_2.txt  build_errors_4.txt  build_errors_5.txt  build_log.txt  build_log_utf8.txt  build_output.txt  build_output_utf8.txt  build_verbose.txt  cmake_log.txt  engine_log.txt  include_debug.txt  include_debug_2.txt  log.txt  main.cpp  msbuild_log.txt  setup_deps.ps1
scratch/: fs.glsl  vs.glsl
shaders/: Documents.lnk  Standard.hlsl  Standard.ps.spv  Standard.vs.spv  imgui.fs.spv  imgui.hlsl  imgui.vs.spv
src/Assets/: AssetImporter.cpp  AssetImporter.h  AssetRegistry.cpp  AssetRegistry.h  stb_image_impl.cpp
src/Audio/: AudioSystem.cpp  AudioSystem.h
src/Core/: Base.h  PathUtils.cpp  PathUtils.h  Window.cpp  Window.h
src/Core/JobSystem/: JobSystem.cpp  JobSystem.h
src/Core/Memory/: Allocator.h  LinearAllocator.h  PoolAllocator.h  StackAllocator.h
src/Core/VFS/: VFS.cpp  VFS.h
src/ECS/: Components.h  Scene.cpp  Scene.h
src/ECS/Components/: MaterialComponent.h
src/Editor/: Editor.cpp  Editor.h  ImGui_ImplNVRHI.cpp  ImGui_ImplNVRHI.h
src/Engine/: Application.cpp  Application.h
src/Graphics/: GraphicsTypes.h  RHI.cpp  RHI.h  Renderer.cpp  Renderer.h
src/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/Project/: ProjectManager.cpp  ProjectManager.h
src/Scripting/: ScriptEngine.cpp  ScriptEngine.h
